fixed the overlapping button content problem

--- a/etchASketch/styles.css
+++ b/etchASketch/styles.css
@@ -1,11 +1,13 @@
 *{
-    max-width: 100%;
     color: white ;
 }
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image: linear-gradient(180deg , white, grey ,black);
+    max-width: 100%;
+    height: 100vh;
+    
 }
 
 header {
@@ -227,6 +229,7 @@ header {
 }
 
 .homePage-img img {
+    max-height: 1100px;
     position: relative;
 }
 
@@ -241,8 +244,8 @@ header {
     font-size: 63px;
     position: absolute;
     top: 60%;
-    width: 70%;
-    max-width: 500px;
+    width: 80%;
+    max-width: 600px;
     height: 100px;
     border: 5px solid black;
     border-radius: 60px;
